--- a/nirum.cabal
+++ b/nirum.cabal
@@ -138,8 +138,8 @@ test-suite spec
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
   -- omit version specifiers for shared dependencies to library
-  build-depends:       aeson                    >=1.0.2   && <2
-               ,       aeson-pretty             >=0.8     && <0.9
+  build-depends:       aeson
+               ,       aeson-pretty
                ,       base
                ,       blaze-html
                ,       bytestring
@@ -157,7 +157,7 @@ test-suite spec
                ,       nirum
                ,       parsec
                        -- only for dealing with htoml's ParserError
-               ,       pretty                   >=1.1.3   && <2
+               ,       pretty
                ,       process                  >=1.1     && <2
                ,       semigroups
                ,       semver
