--- a/nirum.cabal
+++ b/nirum.cabal
@@ -49,13 +49,10 @@ library
                  ,     Nirum.Parser
                  ,     Nirum.Targets
                  ,     Nirum.Targets.Docs
-                 ,     Nirum.Targets.JavaScript
                  ,     Nirum.Targets.List
                  ,     Nirum.Targets.Python
                  ,     Nirum.Version
-  build-depends:       aeson                    >=1.0.2   && <2
-               ,       aeson-pretty             >=0.8     && <0.9
-               ,       base                     >=4.7     && <5
+  build-depends:       base                     >=4.7     && <5
                ,       blaze-html               >=0.8.1.3 && <0.9
                ,       blaze-markup             >=0.7.1.1 && <0.8
                ,       bytestring
@@ -129,7 +126,6 @@ test-suite spec
                ,       Nirum.Package.ModuleSetSpec
                ,       Nirum.PackageSpec
                ,       Nirum.ParserSpec
-               ,       Nirum.Targets.JavaScriptSpec
                ,       Nirum.Targets.PythonSpec
                ,       Nirum.Targets.DocsSpec
                ,       Nirum.TargetsSpec
@@ -138,9 +134,7 @@ test-suite spec
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
   -- omit version specifiers for shared dependencies to library
-  build-depends:       aeson
-               ,       aeson-pretty
-               ,       base
+  build-depends:       base
                ,       blaze-html
                ,       bytestring
                ,       containers
