--- a/package.yaml
+++ b/package.yaml
@@ -26,13 +26,14 @@ default-extensions:
 ghc-options:
 - -Wall
 - -Werror
+dependencies:
+- base >=4.7 && <5
 library:
   source-dirs: src
   ghc-options:
   - -fwarn-incomplete-uni-patterns
   - -fprint-explicit-kinds
   dependencies:
-  - base >=4.7 && <5
   - blaze-html >=0.8.1.3 && <0.9
   - blaze-markup >=0.7.1.1 && <0.8
   - bytestring
@@ -47,14 +48,14 @@ library:
   - megaparsec >=5 && <5.3
   - mtl >=2.2.1 && <3
   - optparse-applicative >=0.13.1 && <0.14
-  - parsec
+  - parsec # only for dealing with htoml's ParserError
   - pretty >=1.1.3 && <2
   - semver >=0.3.0 && <1.0
   - shakespeare >=2.0.12 && <2.1
   - stm >=2.4.4.1
   - template-haskell >=2.11 && <3
   - text >=0.9.1.0 && <1.3
-  - unordered-containers
+  - unordered-containers # only for dealing with htoml's data structures
   - uri >=0.1 && <1.0
 executables:
   nirum:
@@ -64,7 +65,6 @@ executables:
     - -threaded
     - -with-rtsopts=-N
     dependencies:
-    - base >=4.7 && <5
     - nirum
   nirum-static:
     main: Main.hs
@@ -81,7 +81,6 @@ tests:
     main: HLint.hs
     source-dirs: test
     dependencies:
-    - base
     - hlint >=1.9 && <2
   spec:
     main: Spec.hs
@@ -91,8 +90,7 @@ tests:
     - -fno-warn-missing-signatures
     - -threaded
     - -with-rtsopts=-N
-    dependencies:
-    - base
+    dependencies: # omit version specifiers for shared dependencies to library
     - blaze-html
     - bytestring
     - containers
@@ -107,7 +105,7 @@ tests:
     - megaparsec
     - mtl
     - nirum
-    - parsec
+    - parsec # only for dealing with htoml's ParserError
     - pretty
     - process >=1.1 && <2
     - semigroups
