--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ after_build:
 - ps: ls
 - ps: upx.exe -9 nirum-win-${env:PLATFORM}.exe
 test_script:
-- stack test
+- stack --no-terminal test --jobs 1
 - C:\Python36\Scripts\tox -e devruntime
 - C:\Python36\Scripts\tox
 artifacts:
