--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,8 @@ library:
   ghc-options:
   - -fwarn-incomplete-uni-patterns
   - -fprint-explicit-kinds
+  other-modules:
+  - Paths_nirum
   dependencies:
   - blaze-markup >=0.7.1.1 && <0.8
   - cmark >=0.5 && <0.6
