--- a/package.yaml
+++ b/package.yaml
@@ -45,6 +45,7 @@ dependencies:
 - pretty >=1.1.3 && <2
 - semver >=0.3.0 && <1.0
 - text >=0.9.1.0 && <1.3
+- time >=1.6.0.1 && <1.7.0
 - unordered-containers  # only for dealing with htoml's data structures
 library:
   source-dirs: src
@@ -63,6 +64,7 @@ library:
   - stm >=2.4.4.1
   - template-haskell >=2.11 && <3
   - uri >=0.1 && <1.0
+  - vector >= 0.11.0.0 && < 0.12
 executables:
   nirum:
     main: app/nirum.hs
