Add keywords field to package metadata

--- a/test/nirum_fixture/package.toml
+++ b/test/nirum_fixture/package.toml
@@ -1,6 +1,7 @@
 version = "0.3.0"
 description = "Package description"
 license = "MIT"
+keywords = "test example examples"
 
 [[authors]]
 name = "nirum"
