Change keywords metadata from string to array

--- a/test/nirum_fixture/package.toml
+++ b/test/nirum_fixture/package.toml
@@ -1,7 +1,7 @@
 version = "0.3.0"
 description = "Package description"
 license = "MIT"
-keywords = "test example examples"
+keywords = ["sample", "example", "nirum"]
 
 [[authors]]
 name = "nirum"
