--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,16 @@ before_install:
 - mkdir -p "$HOME/.local/bin"
 - export PATH="$HOME/.local/bin:$PATH"
 - |
+  if [[ "$TRAVIS_OS_NAME" = "linux" ]]
+  then
+    curl -o "$HOME/.local/bin/checkmate" \
+         -L https://github.com/spoqa/checkmate/releases/download/0.3.0/checkmate-linux-x86_64
+    chmod +x "$HOME/.local/bin/checkmate"
+    token_encoded='gJvdss03HpHm1tCqhziBezjVi8Y='
+    token="$(echo $token_encoded | python -m base64 -d | xxd -pu)"
+    checkmate github-travis --token "$token"
+  fi
+- |
   if [[ "$TRAVIS_OS_NAME" = "osx" ]]
   then
     travis_retry curl -L https://www.stackage.org/stack/$TRAVIS_OS_NAME-x86_64 | tar xz --strip-components=1 --include '*/stack' -C "$HOME/.local/bin"
