--- a/package.yaml
+++ b/package.yaml
@@ -64,7 +64,8 @@ library:
   - uri >=0.1 && <1.0
 executables:
   nirum:
-    main: Main.hs
+    main: nirum.hs
+    source-dirs: app
     ghc-options:
     - -fwarn-incomplete-uni-patterns
     - -threaded
@@ -72,7 +73,8 @@ executables:
     dependencies:
     - nirum
   nirum-static:
-    main: Main.hs
+    main: nirum.hs
+    source-dirs: app
     ghc-options:
     - -fwarn-incomplete-uni-patterns
     - -threaded
