--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,9 @@ before_install:
   if [[ "$TRAVIS_OS_NAME" = "linux" ]]
   then
     curl -o "$HOME/.local/bin/checkmate" \
-         -L https://github.com/spoqa/checkmate/releases/download/0.3.0/checkmate-linux-x86_64
+         -L https://github.com/spoqa/checkmate/releases/download/0.3.2/checkmate-linux-x86_64
     chmod +x "$HOME/.local/bin/checkmate"
+    checkmate --help
     token_encoded='gJvdss03HpHm1tCqhziBezjVi8Y='
     token="$(echo $token_encoded | python -m base64 -d | xxd -pu)"
     checkmate github-travis --token "$token"
