--- a/package.yaml
+++ b/package.yaml
@@ -26,9 +26,17 @@ extra-source-files:
 - README.md
 default-extensions:
 - OverloadedStrings
-ghc-options:
-- -Wall
-- -Werror
+when:
+- condition: os(darwin)
+  else:
+    ghc-options:
+    - -Wall
+    - -Werror
+  then:
+    ghc-options:
+    - -Wall
+    - -Werror
+    - -optP-Wno-nonportable-include-path
 dependencies:
 - base >=4.7 && <5
 - blaze-html >=0.9.0.1 && <0.10
@@ -39,7 +47,7 @@ dependencies:
 - filepath >=1.4 && <1.5
 - htoml >=1.0.0.0 && <1.1.0.0
 - interpolatedstring-perl6 >=1.0.0 && <1.1.0
-- megaparsec >=5 && <5.4
+- megaparsec >=6.3 && <6.4
 - mtl >=2.2.1 && <3
 - parsec  # only for dealing with htoml's ParserError
 - pretty >=1.1.3 && <2
@@ -58,7 +66,7 @@ library:
   - cmark >=0.5 && <0.6
   - fsnotify >=0.2.1 && <0.3.0
   - heterocephalus >=1.0.5 && <1.1.0
-  - optparse-applicative >=0.13.1 && <0.14
+  - optparse-applicative >=0.14 && <0.15
   - shakespeare >=2.0.12 && <2.1
   - stm >=2.4.4.1
   - template-haskell >=2.11 && <3
