--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,10 @@
-resolver: lts-9.10
+resolver: lts-10.3
 flags: {}
 packages:
 - '.'
 extra-deps:
 - uri-0.1.6.4
 extra-package-dbs: []
+ghc-options:
+  "$locals": -fhide-source-paths
+require-stack-version: ">=1.6.3"
